remove stack folder,start splitting server and client

--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -21,9 +21,9 @@ template(name='alpha')
             if response.queryresult
                 with response.queryresult
                     // .ui.inline.header #{datatypes}
-                    each split_datatypes
-                        .ui.basic.compact.button.select_datatype
-                            |#{this}
+                    // each split_datatypes
+                    //     .ui.basic.compact.button.select_datatype
+                    //         |#{this}
                     // .ui.list
                     //     .item success: #{success}
                     //     .item error: #{error}
