--- a/client/users.jade
+++ b/client/users.jade
@@ -26,7 +26,7 @@ template(name='users')
             //                 .line
             //                 .line
             //                 .line
-        .twelve.wide.column.scrolling
+        .nine.wide.column.scrolling
             .ui.small.inline.header sort by
             +sort_button l='total' i='yin yang' key='data.total_karma'
             +sort_button l='link' i='edit' key='data.link_karma'
@@ -50,7 +50,7 @@ template(name='users')
             //     input.search_location(type='text' placeholder='location' value=current_location_query)
             .spacer
             .ui.hidden.divider
-            .ui.stackable.centered.equal.width.grid.scrolling
+            .ui.stackable.centered.three.column.grid.scrolling
                 unless users.count
                     .ui.basic.center.aligned.segment
                         // i.massive.loading.grey.yin.yang.icon
@@ -63,9 +63,47 @@ template(name='users')
                                 .line
                 each users
                     +user_small
+        .four.wide.column            
+            with emotion_avg
+                if is_positive
+                    span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
+                        |&nbsp;
+                    div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                else
+                    span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  negative
+                        |&nbsp;
+                //     div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% sentiment 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_sent_score}}%;background-color:green" title="{{to_percent avg_sent_score}}% joy")
+                span.say.ui.green.text(class="{{calculated_size avg_joy_score}}") {{ to_percent avg_joy_score }}% joy 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_joy_score}}%;background-color:green" title="{{to_percent avg_joy_score}}% joy")
+                //- if above_50 'avg_sadness_score'
+                    //- .spacer
+                span.say.ui.blue.text(class="{{calculated_size avg_sadness_score}}") {{ to_percent avg_sadness_score}}% sad 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_sadness_score}}%;background-color:blue" title="{{to_percent avg_sadness_score}}% sad")
+                //- if above_50 'avg_fear_score'
+                    //- .spacer
+                span.say.ui.grey.text(class="{{calculated_size avg_fear_score}}") {{ to_percent avg_fear_score }}% fear 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_fear_score}}%;background-color:grey" title="{{to_percent avg_fear_score}}% fear")
+                //- if above_50 'avg_disgust_score'
+                    //- .spacer
+                span.say.ui.orange.text(class="{{calculated_size avg_disgust_score}}") {{ to_percent avg_disgust_score }}% disgust 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_disgust_score}}%;background-color:orange" title="{{to_percent avg_disgust_score}}% disgust")
+                //- if above_50 'avg_anger_score'
+                    //- .spacer
+                span.say.ui.red.text(class="{{calculated_size avg_anger_score}}") {{ to_percent avg_anger_score }}% anger 
+                    |&nbsp;
+                div.rounded(style="height:5px;width:{{to_percent avg_anger_score}}%;background-color:red" title="{{to_percent avg_anger_score}}% anger")
+                    
+                    
                     
 template(name='user_small')
-    .four.wide.column
+    .column
         a.select_user(href="/user/#{username}")
             img.ui.circular.small.image.zoomer(src=data.snoovatar_img)
         .content
