--- a/client/watson.jade
+++ b/client/watson.jade
@@ -102,7 +102,7 @@ template(name='call_watson')
         i.dna.icon
         if current_doc.watson 
             i.checkmark.green.icon
-        |download and autotag
+        |autotag url
 
 template(name='get_emotion')
     button.ui.fluid.basic.button.get
