--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,6 +1,6 @@
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.compact.button.set_session_v.say(class=calculated_class title=t)
+    .ui.compact.large.button.set_session_v.say(class=calculated_class title=t)
         // if i
         if selected 
             // +i n=i cl='ui mini inline image'
