--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -57,7 +57,7 @@ template(name='subreddit')
                             i.big.loading.yin.yang.icon
             .four.wide.column.scrolling.seg
                 img.ui.inline.image(src=data.header_img)
-                .ui.inline.header.pull_latest #{data.title}
+                .ui.small.inline.header.pull_latest #{data.title}
                 // +alpha
                 div
                 .ui.inline.small.header
@@ -333,7 +333,7 @@ template(name='sub_unpick_tag')
         
 template(name='flat_sub_tag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.image.label.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.image.circular.label.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.image.superzoom(src=term.watson.metadata.image )    
