--- a/client/client.jade
+++ b/client/client.jade
@@ -37,28 +37,21 @@ head
 
 template(name='nav')
     .ui.fluid.attached.borderless.three.item.menu
-        // a.icon.item.toggle_sidebar.no_blink
-        //     i.bars.icon
-    
         a.ui.icon.item(href="/" class="{{isActiveRoute regex='home'}}")
             i.search.large.icon
-        // a.ui.icon.item.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
-        //     i.search.icon
-        a.ui.icon.item(href="/subs" class="{{isActiveRoute regex='sub'}}")
-            i.fire.large.icon
-        // a.ui.icon.item.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
-        //     i.stack.exchange.icon
         a.ui.icon.item(href="/users" class="{{isActiveRoute regex='user'}}")
             i.user.outline.large.icon
-        // .item(title='session karma')
-        //     i.grey.lightning.icon
-        //     |#{session_clicks}
-        // .item(title='global karma')
-        //     i.grey.globe.icon
-        //     |#{global_karma}
-        // +status
     
 
+template(name='sort_direction_button')
+    .ui.icon.circular.button.toggle_sort
+        if skv_is 'sort_direction' 1
+            i.chevron.down.icon
+        else
+            i.chevron.up.icon
+            
+            
+            
 template(name='layout')
     +nav
     +yield
