--- a/client/style.css
+++ b/client/style.css
@@ -36,7 +36,7 @@ body {
   padding-left:0px !important;
   margin-left:0px !important;
 }
-.tag_select_class {
+.click_shortcut {
   margin:15px !important;
   transform: scale(1.2) !important;
 }
