--- a/client/home.jade
+++ b/client/home.jade
@@ -10,7 +10,7 @@ template(name='home')
                     .ui.center.aligned.basic.segment
                         .ui.icon.big.input
                             i.search.icon
-                            input.search_tag(type='text' value=query autofocus='' placeholder="search...")
+                            input.search_input(type='text' value=query autofocus='' placeholder="search...")
                         div
                         +search_shortcut tag='math' icon='calculator'
                         +search_shortcut tag='camping' icon='campground'
@@ -57,7 +57,7 @@ template(name='home')
                             i.loading.yin.yang.icon
                         else
                             i.search.icon
-                        input.search_tag(type='text' value=query autofocus='' placeholder="#{post_count}")
+                        input.search_input(type='text' value=query autofocus='' placeholder="#{post_count}")
                         // .ui.label #{this}
                     
                     // if many_tags
@@ -70,109 +70,49 @@ template(name='home')
                         +tag_picker
                         // .ui.label(title=count) #{name}
         .row
-            .ui.four.wide.column
-                +alpha
-                each wikis
-                    .ui.card
-                        if watson.metadata.image
-                            // a(href=url target='_window')
-                            img.ui.image.toggle_view(src=watson.metadata.image)
-                        .content
-                            i.large.wikipedia.icon
-                            a.ui.inline.header(href=url target='_window') #{title}
-                            a.black_text(href=url target='_window')
-                                |{{ trunc analyzed_text }}...
-                            each ten_tags
-                                +flat_tag_picker
-                                // .ui.label.flat_tag_pick #{this}
-                    // if one_post
-                    //     .ui.stackable.one.column.grid
-                    //         each rposts
-                    //             +card
+            // .ui.four.wide.column
+            //     // +alpha
+            //     each wikis
+            //         .ui.card
+            //             if watson.metadata.image
+            //                 // a(href=url target='_window')
+            //                 img.ui.image.toggle_view(src=watson.metadata.image)
+            //             .content
+            //                 i.large.wikipedia.icon
+            //                 a.ui.inline.header(href=url target='_window') #{title}
+            //                 a.black_text(href=url target='_window')
+            //                     |{{ trunc analyzed_text }}...
+            //                 each ten_tags
+            //                     +flat_tag_picker
+            //                     // .ui.label.flat_tag_pick #{this}
+            //         // if one_post
+            //         //     .ui.stackable.one.column.grid
+            //         //         each rposts
+            //         //             +card
                             
-                    // else if two_posts
-                    //     .ui.stackable.three.centered.column.grid
-                    //         each rposts
-                    //             +card
-                        // else if three_posts
-                    // else
+            //         // else if two_posts
+            //         //     .ui.stackable.three.centered.column.grid
+            //         //         each rposts
+            //         //             +card
+            //             // else if three_posts
+            //         // else
             if picked_tags
-                .ui.eight.wide.column
+                .ui.sixteen.wide.column
                     +sort_direction_button
                     // +limit_button value=1
                     // +limit_button value=10
                     // +limit_button value=20
                     // +view_layout_button label='grid' icon='th'
                     // +view_layout_button label='list' icon='list'
-                    +sort_button l='upvotes' i='thumbs up outline' key='data.ups'
-                    +sort_button l='comments' i='chat outline' key='data.comment_count'
-                    +sort_button l='joy' i='smile' c='green' key='rep_joy'
-                    +sort_button l='anger' i='frown' c='red' key='rep_anger'
-                    +sort_button l='sadness' i='frown' c='blue' key='rep_sadness'
-                    +sort_button l='disgust' i='frown' c='orange' key='rep_disgust'
-                    +sort_button l='fear' i='frown' c='grey' key='rep_fear'
-                
-                    .ui.stackable.one.column.grid.scrolling
+                    .ui.stackable.three.column.grid.scrolling
                         each rposts
                             +card
                     //     .ui.basic.center.aligned.segment
                     //         i.big.loading.yin.yang.icon
-                // .ui.four.wide.column
-                //     +toggle_facet key='Location'
-                //     +toggle_facet key='domain'
-                //     +toggle_facet key='author'
-                //     if view_Location
-                //         +Location_facet
-                //     div
-                //     .ui.inline.small.header
-                //         i.globe.icon
-                //         |domains
-                //     each picked_domains
-                //         a.ui.black.label.unpick_domain
-                //             |#{this}
-                //     each domain_results
-                //         a.ui.basic.label.pick_domain(class=domain_selector_class)
-                //             |#{name} 
-                //             small #{count}
-                //     div
-                //     .ui.inline.small.header
-                //         i.clock.icon    
-                //         |authors
-                //     each picked_authors
-                //         a.ui.black.label.unpick_author
-                //             |#{this}
-                //     each author_results
-                //         a.ui.basic.label.pick_author(class=domain_selector_class)
-                //             |#{name} 
-                //             small #{count}
-                    // .ui.inline.header.pull_latest #{display_name}
-
-
-template(name='toggle_facet')
-    .ui.button.toggle_facet
-        |#{key}
-
-template(name='Location_facet')
-    .ui.inline.small.header
-        i.marker.icon
-        |locations
-    each picked_Locations
-        a.ui.black.label.unpick_Location
-            |#{this}
-    each Location_results
-        a.ui.basic.label.pick_Location(class=domain_selector_class)
-            |#{name} 
-            small #{count}
-
-
 template(name='search_shortcut')
-    i.big.grey.link.icon.search_tag.zoomer(class=icon title=tag)
+    i.big.grey.link.icon.click_shortcut.zoomer(class=icon title=tag)
 
    
-template(name='limit_button')
-    // i.big.grey.link.icon.search_tag.zoomer(class=icon title=tag)
-    .ui.circular.basic.compact.icon.button.set_limit(class=limit_button_class)
-        |#{value}
 
 template(name='card')
     .column.smallscroll
@@ -204,7 +144,7 @@ template(name='card')
             .ui.label 
                 i.user.icon
                 |#{data.author}
-            a.black_text(href="r/#{sub}/post/#{_id}")
+            a.black_text(href="post/#{_id}")
                 |{{ trunc analyzed_text }}...
             +print_this
             // div
