--- a/client/home.jade
+++ b/client/home.jade
@@ -98,13 +98,7 @@ template(name='home')
             //         // else
             if picked_tags
                 .ui.sixteen.wide.column
-                    +sort_direction_button
-                    // +limit_button value=1
-                    // +limit_button value=10
-                    // +limit_button value=20
-                    // +view_layout_button label='grid' icon='th'
-                    // +view_layout_button label='list' icon='list'
-                    .ui.stackable.three.column.grid.scrolling
+                    .ui.stackable.four.column.grid.scrolling
                         each rposts
                             +card
                     //     .ui.basic.center.aligned.segment
@@ -134,7 +128,7 @@ template(name='card')
                     img.ui.inline.zoomer.fluid.image.zoomer(src=data.thumbnail)    
         .content
             // a.ui.inline.header.view_post.zoomer(href="" class=post_header_class target='_window')
-            a.ui.inline.small.header.goto_post.pointer(class=post_header_class title=domain)
+            a.ui.inline.header.goto_post.pointer(class=post_header_class title=domain)
                 |!{data.title} 
                 // span.inline.content
             |{{ufrom data.created_utc}}
