--- a/client/post.jade
+++ b/client/post.jade
@@ -1,7 +1,7 @@
 template(name='post')
     with current_doc
         .ui.stackable.grid
-            .twelve.wide.column
+            .sixteen.wide.column
                 // a.ui.basic.button.goto_sub(href="/r/#{data.subreddit}")
                 //     i.chevron.left.icon
                 //     |#{data.subreddit}
@@ -13,7 +13,7 @@ template(name='post')
                 //     |#{data.permalink}
                 div
                 // if skv_is 'view_section' 'main'
-                .scrolling
+                .scrollin
                     // unless watson
                     //     +call_watson id=_id key='data.url' url=data.url mode='url'
 
@@ -73,82 +73,7 @@ template(name='post')
                     //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
                     // .rounded
                     //     |!{embed}
-                +skve k='view_section' v='comments' l='comments' i='chat'
-                // +skve k='view_section' v='main' l='main' i='content'
-                // +skve k='view_section' v='comments' l='comments' i='comment'
-                +skve k='view_section' v='watson' l='emotion' i='dna'
-                // if tone
-                // +skve k='view_section' v='tags' l='tags' i='tags'
                 // +skve k='view_section' v='related' l='related' i='fork'
-                unless key_value_is 'data.domain' 'reddit.com'
-                    +skve k='view_section' v='preview' l='preview' i='content'
-                if skv_is 'view_section' 'watson'
-                    .scrolling
-                        +watson_view
-                        +watson_full
-                // if skv_is 'view_section' 'related'
-                //     +post_related
-                //     +related_questions
-                    iframe(width="100%" height="800" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
-                // +convert
-                // .spacer
-                // if skv_is 'view_section' 'tags'
-                if skv_is 'view_section' 'comments'
-                    .ui.basic.fluid.button.get_comments
-                        i.download.icon
-                        |comments
-                    .scrolling
-                        +rcomments_tab
-                .ui.fluid.basic.button.get_post
-                    i.download.icon
-                    |post
-                | {{ufrom data.created}}
-                if data.url
-                    a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
-                        i.external.icon
-                        |url
-                .ui.large.basic.label
-                    | #{data.domain}
-                unless data.is_reddit_media_domain    
-                    if data.thumbnail
-                        img.ui.fluid.rounded.image.pointer.call_thumbnail.zoomer(src=data.thumbnail)
-                // .ui.header #{data.domain}
-                a.ui.basic.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
-                    i.external.grey.icon
-                    |r/#{data.subreddit}
-                .spacer
-                i.large.audio.icon.read_me
-                // a.ui.basic.button(href="https://www.reddit.com/u/#{author}" target='_window')
-                a.ui.basic.button.goto_user(href="/user/#{data.author}")
-                    i.user.outline.icon
-                    |#{data.author}
-                if data.url
-                    .ui.large.circular.basic.button
-                        img(src="https://img.icons8.com/color/48/000000/downloads.png")
-                        |download page
-                // +call_watson id=_id key='data.url' url=data.url mode='url'
-                unless max_emotion_percent
-                    .ui.large.circular.basic.button.get_emotion
-                        img(src="https://img.icons8.com/color/48/000000/satisfaction.png")
-                        |analyze emotion
-                    
-                if in_dev
-                    +print_this
-                if watson
-                    +doc_emotion
-                // a.ui.large.basic.label(href=data.url target='_window')
-                //     | #{data.url}
-                if in_dev
-                    .ui.small.header reddit_id #{data.reddit_id}
-                .ui.basic.label
-                    i.comment.outline.icon
-                    |#{data.comment_count}
-                .ui.basic.label
-                    i.thumbs.up.outline.icon
-                    |#{data.ups}
-                |{{to_percent data.upvote_ratio}}%
-                .ui.small.inline.header #{data.num_crossposts} crossposts
-                |#{tags.length}
                 each tags
                     +flat_tag_picker
                 
