--- a/client/style.css
+++ b/client/style.css
@@ -21,7 +21,7 @@ body {
   /*font-size: 100% !important; */
   /* line-height: 200% !important; */
   /*background: rgba(0,0,0,1) !important; */
-  /*scroll-behavior: smooth;*/
+  scroll-behavior: smooth;
   /*margin-top: 5em;*/
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
@@ -51,8 +51,8 @@ body {
 
 .mark_viewed {
     animation: fadein 1s !important;
-    animation: fadeout .5s; 
-    transition: all .5s ease !important; 
+    animation: fadeout 1s; 
+    transition: all 1s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.5) !important;*/
@@ -499,7 +499,7 @@ img:active {
   z-index: 1000 !important;
 }
 /*img.zoomer:hover {*/
-/*    transition: all ..5s ease !important; */
+/*    transition: all .1s ease !important; */
 /*    z-index: 1000 !important;*/
 /*    transform: scale(1.2) !important;*/
 /*}*/
@@ -778,17 +778,17 @@ input {
 
 .button,.card,.image,.header,p,img,.say,.pointer, .item{
     animation: fadein 1s !important;
-    -webkit-transition: opacity .5s ease-in !important;
-    -webkit-transition: opacity .5s ease-out; 
-    animation: fadeout .5s; 
+    -webkit-transition: opacity 1s ease-in !important;
+    -webkit-transition: opacity 1s ease-out; 
+    animation: fadeout 1s; 
 }
 
 
 .icon:not(.loading){
     animation: fadein 1s !important;
-    transition: all .5s ease !important;
+    transition: all 1s ease !important;
     /* -webkit-transition: opacity .15s ease-out; */
-    animation: fadeout .5s; 
+    animation: fadeout 1s; 
 }
 
 
@@ -816,7 +816,7 @@ input {
   /*font-family: 'Roboto', sans-serif !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
   /*font-family: 'Lato', sans-serif !important; */
-  /*font-family: 'Ubuntu', sans-serif !important;*/
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 @keyframes fadein {
