--- a/client/home.jade
+++ b/client/home.jade
@@ -71,7 +71,6 @@ template(name='home')
                         // .ui.label(title=count) #{name}
         .row
             // .ui.four.wide.column
-            //     // +alpha
             //     each wikis
             //         .ui.card
             //             if watson.metadata.image
@@ -96,6 +95,7 @@ template(name='home')
             //         //             +card
             //             // else if three_posts
             //         // else
+            +alpha
             if picked_tags
                 .ui.sixteen.wide.column
                     .ui.stackable.four.column.grid.scrolling
